--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   flutter_google_pay: ^0.1.4
+  flutter_apple_pay: ^0.1.3
 
 dev_dependencies:
   flutter_test:
